--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1396,7 +1396,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1** Your answer here\n",
+    "\n",
+    "To start off with my summary, Big Mountain Resort charges 81 for a normal adult ticket. Big Mountain Resort modelled price is 94.22, actual price is 81.00.\n",
+    "Even with the expected mean absolute error of 10.39, this suggests there is room for an increase, BMR has amazing features in its resort that others do not.\n",
+    "\n",
+    "I would suggest to the executives of the company that adjusting the ticket price higher certainly would benefit them, and would’nt loose customers due to their resorts unique features.\n",
+    "\n",
+    "Additional operating costs like a new chair lift only add to the overall inclination to boost ticket prices. \n",
+    "Extending the vertical drop, even with the additional costs of chair lifts and snow making area, is the TOP scenario for increased revenue.\n",
+    "Closing 1-3 runs that are difficult/expensive for the resort to maintain could be done, but closing 6 or more runs leads to a drop in ticket price.\n",
+    "\n",
+    "**My Notes while going through**\n",
+    "\n",
+    "Load data, remove Big Mountain Resort data so we can train a model to predict BRM ticket prices from other resorts. Lets calculate price only on its competitors.\n",
+    "\n",
+    "Calculating expected BRM ticket price from the model. model.predict(X_bm)\n",
+    "Big Mountain Resort modelled price is $94.22, actual price is $81.00.\n",
+    "Even with the expected mean absolute error of $10.39, this suggests there is room for an increase.\n",
+    "\n",
+    "Look at results with a grain of salt, maybe the resort it undercharging, but maybe other resorts are overcharging. Operating costs might be a factor to consider when looking at ticket prices.\n",
+    "\n",
+    "Features most important from modeling:\n",
+    "-vertical_drop\n",
+    "-Snow Making_ac\n",
+    "-total_chairs\n",
+    "-fastQuads\n",
+    "-Runs\n",
+    "-LongestRun_mi\n",
+    "-trams\n",
+    "-SkiableTerrain_ac\n",
+    "\n",
+    "Height difference from summit to base = from highest LIFT serviced point on the mountain.\n",
+    "\n",
+    "We can mark where BMR sits on the distribution with a vertical line. \n",
+    "-BMR is the highest price in the state of Montana.\n",
+    "-Does well for vertical drop, few resorts have a greater drop.\n",
+    "-BMR is VERY high in snow making \n",
+    "-Among highest number in total chairs\n",
+    "-BMR has 3 fast quads, high up league\n",
+    "-Compares well for number of runs\n",
+    "-Has one of the longest runs, longer runs are rare.\n",
+    "-Most resorts have no trams like BMR\n",
+    "-Skiable terrain is amongst largest amount.\n",
+    "\n",
+    "Modeling Scenarios options w/ 350,000 visitors on average, skiing 5 days:\n",
+    "Scenario 1 = close up to 10 least used runs\n",
+    "Scenario 2 = increase vertical drop, makes 150 ft lower\n",
+    "BUT installation of an additional chair lift, without snow making coverage\n",
+    "Scenario 3 = same but adding a snow making cover to area\n",
+    "Scenario 4 = increase longest run by 0.2 miles, boasting 3.5 miles in length\n",
+    "BUT additional snow making coverage of 4 acres\n",
+    "\n",
+    "S1 - Closing 1 run makes no difference, closing 6 or more leads to a large drop in ticket price.\n",
+    "S2 - This scenario increases support for ticket price by 1.99\n",
+    "Over the season, this could be expected to amount to 3474638\n",
+    "S3 - Small increase in snow making area, makes no difference.\n",
+    "S4 - No difference whatsoever, Random Forest Model has longerst_run WAYY down on its feature importance list.\n"
    ]
   },
   {
